@@ -1,8 +1,6 @@
 package org.akhq.repositories;
 
 import io.micronaut.context.ApplicationContext;
-import io.micronaut.security.authentication.Authentication;
-import io.micronaut.security.utils.SecurityService;
 import org.akhq.models.ConsumerGroup;
 import org.akhq.models.Partition;
 import org.akhq.models.audit.ConsumerGroupAuditEvent;
@@ -44,18 +42,16 @@ public class ConsumerGroupRepository extends AbstractRepository {
         return PagedList.of(all(clusterId, search, filters), pagination, groupsList -> this.findByName(clusterId, groupsList, filters));
     }
 
-    public List<String> all(String clusterId, Optional<String> search, List<String> filters) throws ExecutionException, InterruptedException {
-        ArrayList<String> list = new ArrayList<>();
-
-        for (ConsumerGroupListing item : kafkaWrapper.listConsumerGroups(clusterId)) {
-            if (isSearchMatch(search, item.groupId()) && isMatchRegex(filters, item.groupId())) {
-                list.add(item.groupId());
-            }
+    public List<String> all(String clusterId, Optional<String> search, List<String> filters) {
+        try {
+            return kafkaWrapper.listConsumerGroups(clusterId).stream()
+                .map(ConsumerGroupListing::groupId)
+                .filter(groupId -> isSearchMatch(search, groupId) && isMatchRegex(filters, groupId))
+                .sorted(String::compareToIgnoreCase)
+                .collect(Collectors.toList());
+        } catch (ExecutionException e) {
+            throw new RuntimeException(e);
         }
-
-        list.sort(Comparator.comparing(String::toLowerCase));
-
-        return list;
     }
 
     public ConsumerGroup findByName(String clusterId, String name, List<String> filters) throws ExecutionException, InterruptedException {
@@ -66,75 +62,133 @@ public class ConsumerGroupRepository extends AbstractRepository {
         return consumerGroup.orElseThrow(() -> new NoSuchElementException("Consumer Group '" + name + "' doesn't exist"));
     }
 
-    public List<ConsumerGroup> findByName(String clusterId, List<String> groups, List<String> filters) throws ExecutionException, InterruptedException {
+    /**
+     * Find all the consumer groups matching the list of names
+     * Execution time can be long if the list of groups is big. This method does several calls to the Kafka cluster
+     * (describeConsumerGroups, listConsumerGroupOffsets, describeTopics) to build ConsumerGroup with:
+     * - consumer groups description containing the active members
+     * - consumer groups offsets (allowing to retrieve the topics for empty consumer groups)
+     * - topics partition offsets (allowing to compute the lag)
+     *
+     * @param clusterId cluster id
+     * @param groups list of consumer group names
+     * @param filters security filters applied to the user
+     * @return list of consumer groups
+     */
+    public List<ConsumerGroup> findByName(String clusterId, List<String> groups, List<String> filters) {
         List<String> filteredConsumerGroups = groups.stream()
             .filter(t -> isMatchRegex(filters, t))
             .collect(Collectors.toList());
-        Map<String, ConsumerGroupDescription> consumerDescriptions = kafkaWrapper.describeConsumerGroups(clusterId, filteredConsumerGroups);
 
-        Map<String, Map<TopicPartition, OffsetAndMetadata>> groupGroupsOffsets = consumerDescriptions.keySet().stream()
-            .map(group -> {
-                try {
-                    return new AbstractMap.SimpleEntry<>(group, kafkaWrapper.consumerGroupsOffsets(clusterId, group));
-                } catch (ExecutionException e) {
-                    throw new RuntimeException(e);
-                }
-            })
-            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        try {
+            // Get the consumer group description of all the consumer groups the user has access to
+            Map<String, ConsumerGroupDescription> consumerDescriptions = kafkaWrapper.describeConsumerGroups(clusterId, filteredConsumerGroups);
 
-        List<String> topics = groupGroupsOffsets.values().stream()
-            .map(Map::keySet)
-            .flatMap(Set::stream)
-            .map(TopicPartition::topic)
-            .distinct()
-            .collect(Collectors.toList());
-        Map<String, List<Partition.Offsets>> topicTopicsOffsets = kafkaWrapper.describeTopicsOffsets(clusterId, topics);
+            // Get the consumer group offsets to get also the topics on which the groups are affected
+            Map<String, Map<TopicPartition, OffsetAndMetadata>> groupGroupsOffsets = consumerDescriptions.keySet().stream()
+                .map(group -> {
+                    try {
+                        return new AbstractMap.SimpleEntry<>(group, kafkaWrapper.consumerGroupsOffsets(clusterId, group));
+                    } catch (ExecutionException e) {
+                        throw new RuntimeException(e);
+                    }
+                })
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
-        return consumerDescriptions.values().stream()
-            .map(consumerGroupDescription -> new ConsumerGroup(
-                consumerGroupDescription,
-                groupGroupsOffsets.get(consumerGroupDescription.groupId()),
-                groupGroupsOffsets.get(consumerGroupDescription.groupId()).keySet().stream()
-                    .map(TopicPartition::topic)
-                    .distinct()
-                    .collect(Collectors.toMap(Function.identity(), topicTopicsOffsets::get))
-            ))
-            .sorted(Comparator.comparing(ConsumerGroup::getId))
-            .collect(Collectors.toList());
+            // Extract the topics list
+            List<String> topics = groupGroupsOffsets.values().stream()
+                .map(Map::keySet)
+                .flatMap(Set::stream)
+                .map(TopicPartition::topic)
+                .distinct()
+                .collect(Collectors.toList());
+
+            // Get the topics offsets to be able to extract later the offsets of empty consumer groups
+            Map<String, List<Partition.Offsets>> topicTopicsOffsets = kafkaWrapper.describeTopicsOffsets(clusterId, topics);
+
+            // Build the consumer groups with all the information collected before
+            return consumerDescriptions.values().stream()
+                .map(consumerGroupDescription -> new ConsumerGroup(
+                    consumerGroupDescription,
+                    groupGroupsOffsets.get(consumerGroupDescription.groupId()),
+                    groupGroupsOffsets.get(consumerGroupDescription.groupId()).keySet().stream()
+                        .map(TopicPartition::topic)
+                        .distinct()
+                        .collect(Collectors.toMap(Function.identity(), topicTopicsOffsets::get))
+                ))
+                .sorted(Comparator.comparing(ConsumerGroup::getId))
+                .collect(Collectors.toList());
+        } catch (ExecutionException | InterruptedException e) {
+            throw new RuntimeException(e);
+        }
     }
 
+    /**
+     * Find all the active consumer groups for a list of topics
+     * Use the ConsumerGroupDescription to find the active topics from the consumer group description members.
+     *
+     * @param clusterId cluster id
+     * @param topics topics name
+     * @param filters security filters applied to the user
+     * @return list of consumer groups
+     */
+    public List<ConsumerGroup> findActiveByTopics(String clusterId, List<String> topics, List<String> filters) {
+        List<String> groupsName = this.all(clusterId, Optional.empty(), filters);
+
+        // Keep only the consumer groups that have the topic(s) in their active topics
+        List<String> consumerGroups =
+            kafkaWrapper.describeConsumerGroups(clusterId, groupsName)
+                .values().stream()
+                .filter(description ->
+                    description.members()
+                        .stream()
+                        .flatMap(member -> member.assignment().topicPartitions()
+                            .stream().map(TopicPartition::topic))
+                        .distinct()
+                        .anyMatch(topics::contains)
+                )
+                .map(ConsumerGroupDescription::groupId)
+                .toList();
+
+        return this.findByName(clusterId, consumerGroups, filters);
+    }
+
+    public List<ConsumerGroup> findActiveByTopic(String clusterId, String topic, List<String> filters) {
+        return findActiveByTopics(clusterId, List.of(topic), filters);
+    }
+
+    /**
+     * Find all the consumer groups for a topic, empty or not.
+     * Warning: this method loops over all the consumer groups in the cluster because it searches for the empty consumer groups too.
+     * Consider using findActiveByTopic if searching for the active consumer groups is enough because. The execution time will be faster
+     *
+     * @param clusterId cluster id
+     * @param topic topic name
+     * @param filters security filters applied to the user
+     * @return list of consumer groups
+     */
     public List<ConsumerGroup> findByTopic(String clusterId, String topic, List<String> filters) throws ExecutionException, InterruptedException {
         List<String> groupName = this.all(clusterId, Optional.empty(), filters);
         List<ConsumerGroup> list = this.findByName(clusterId, groupName, filters);
 
-        return list
-            .stream()
-            .filter(consumerGroups ->
-                consumerGroups.getActiveTopics()
-                    .stream()
-                    .anyMatch(s -> Objects.equals(s, topic)) ||
-                    consumerGroups.getTopics()
-                        .stream()
-                        .anyMatch(s -> Objects.equals(s, topic))
-            )
+        return list.stream()
+            .filter(consumerGroup -> consumerGroup.getTopics().stream()
+                .anyMatch(s -> Objects.equals(s, topic)))
             .collect(Collectors.toList());
     }
 
-    public List<ConsumerGroup> findByTopics(String clusterId, List<String> topics, List<String> filters) throws ExecutionException, InterruptedException {
+    public List<ConsumerGroup> findByTopics(String clusterId, List<String> topics, List<String> filters) {
 
         List<String> groupName = this.all(clusterId, Optional.empty(), filters);
         List<ConsumerGroup> list = this.findByName(clusterId, groupName, filters);
         return list
             .stream()
             .filter(consumerGroups ->
-                consumerGroups.getActiveTopics()
-                    .stream()
-                    .anyMatch(s -> topics.contains(s)) ||
                     consumerGroups.getTopics()
                         .stream()
-                        .anyMatch(s -> topics.contains(s))
+                        .anyMatch(topics::contains)
             )
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public void updateOffsets(String clusterId, String name, Map<org.akhq.models.TopicPartition, Long> offset) {
